Sites DataViews: Remove the padding around the table columns to fix alignment

--- a/client/hosting/sites/components/dotcom-style.scss
+++ b/client/hosting/sites/components/dotcom-style.scss
@@ -147,15 +147,6 @@
 	table.dataviews-view-table thead .dataviews-view-table__row th {
 		border-bottom-color: var(--color-border-secondary);
 
-		@include break-large {
-			padding-left: 26px;
-		}
-		@include break-huge {
-			&:first-child {
-				padding-left: 64px;
-			}
-		}
-
 		&:nth-child(4) {
 			.site-sort {
 				display: inline-block;
@@ -184,14 +175,6 @@
 
 	table.dataviews-view-table .dataviews-view-table__row td {
 		border-bottom-color: var(--color-border-secondary);
-		@include break-large {
-			padding-left: 26px;
-		}
-		@include break-huge {
-			&:first-child {
-				padding-left: 64px;
-			}
-		}
 		&:nth-child(2) {
 			white-space: wrap;
 			overflow-wrap: anywhere;
